RESOLVED FIXED304479
http/tests/media/fairplay/fps-mse-unmuxed-mpts.html is a permanent failure with MediaSourceUseRemoteAudioVideoRenderer on
https://bugs.webkit.org/show_bug.cgi?id=304479
Summary http/tests/media/fairplay/fps-mse-unmuxed-mpts.html is a permanent failure wi...
Jean-Yves Avenard [:jya]
Reported 2025-12-18 23:40:00 PST
STR: 1- Set MediaSourceUseRemoteAudioVideoRenderer preference on (requires a restart) 2- run run-webkit-httpd 3- load http://localhost:8000/media/fairplay/fps-mse-unmuxed-mpts.html notice that the video is marked as broken. rdar://166852196
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-12-18 23:44:58 PST
EWS
Comment 2 2025-12-19 02:25:27 PST
Committed 304740@main (a2b90ad96578): <https://commits.webkit.org/304740@main> Reviewed commits have been landed. Closing PR #55689 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.