http/tests/media/fairplay/fps-mse-unmuxed-mpts.html is a permanent failure with MediaSourceUseRemoteAudioVideoRenderer on https://bugs.webkit.org/show_bug.cgi?id=304479 rdar://166852196

Reviewed by Youenn Fablet.

We had two issues in place:
1- When using mpeg-ts encrypted content, the key CommonEncryptionOriginalFormat wasn't present
   We incorrectly aborted the retrieval of the EncryptionDataCollection early.
   We make this field in the TrackInfo's EncryptionDataCollection optional
2- When the key TransportStreamEncryptionInitData was set, we incorrectly used CommonEncryptionTrackEncryptionBox
   instead TransportStreamEncryptionInitData EncryptionBoxType value.

Covered by existing test. Unfortunately those tests are not run when using the public SDK (EWS).
* Source/WebCore/platform/TrackInfo.h:
* Source/WebCore/platform/graphics/cocoa/CMUtilities.mm:
(WebCore::getEncryptionDataCollection):
(WebCore::createFormatDescriptionFromTrackInfo):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/304740@main